syntax = "proto3";

package greptime.v1.codec;

message PhysicalPlanNode {
    oneof PhysicalPlanType {
      ProjectionExecNode projection = 1;
      // TODO(fys): impl other physical plan node
    }
  }

  message ProjectionExecNode {
    PhysicalPlanNode input = 1;
    repeated PhysicalExprNode expr = 2;
    repeated string expr_name = 3;
  }

  message PhysicalExprNode {
    oneof ExprType {
      PhysicalColumn column = 1;
      // TODO(fys): impl other physical expr node
    }
  }

  message PhysicalColumn {
    string name = 1;
    uint32 index = 2;
  }